--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,21 +13,35 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    background-color: rgb(239 246 255 / var(--tw-bg-opacity));
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+body {
+  background: rgb(239 246 255);
+}
+
+.App {
+  text-align: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.Pictures {
+  margin: 10px;
+}
+img {
+  margin: 5px;
+}
+
+.Board {
+  width: 300px;
+  height: 500px;
+  border: 2px solid black;
 }
